--- a/travel.html
+++ b/travel.html
@@ -22,7 +22,7 @@
           <li>
             <a href="#">국내여행</a>
             <ol class="lnb">
-              <li><a href="#">제주</a></li>
+              <li><a href="#1">제주</a></li>
               <li><a href="#">서울</a></li>
               <li><a href="#">경상</a></li>
               <li><a href="#">경기</a></li>
