--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
 
     <section class="suggestion">
       <div class="sg_container">
-        
+
       </div>
     </section>
-      <!-- <div class="hd_content">
+      <!-- <div class="hd_ccsontent">
       <h1 class="logo"><a href="#">Travel</a></h1>
       <nav>
         <ul class="gnb">
