--- a/index.html
+++ b/index.html
@@ -101,7 +101,16 @@
 
     <section class="suggestion">
       <div class="sg_container">
+        <fieldset>
+          <legend>호텔정보</legend>
 
+          <ul>
+            <li>
+              <label for="">aa</label>
+              <input type="text" id="">
+            </li>
+          </ul>
+        </fieldset>
       </div>
     </section>
       <!-- <div class="hd_ccsontent">
@@ -402,21 +411,16 @@
         </div>
         <div class="fot_right">
 
-          <div class="languge">
-            <div class="lang_select">
-              <label for="seclet1"></label>
-              <input type="text" id="select1" value="Korean" readonly />
-              <button type="button">더보기</button>
-            </div>
-          </div>
           <div class="fot_list">
-            <span class="fot_btn"></span>
-            <ul class="fot_listc">
-              <li><a href="#">Korean</a></li>
-            <li><a href="#">English</a></li>
-            <li><a href="#">Japanese</a></li>
-            <li><a href="#">Chinese</a></li>
-            </ul>
+          
+                   <select name="lang" id="lang">
+                     <option value="korean">korean</option>
+                     <option value="English">English</option>
+                     <option value="Japanese">Japanese</option>
+                     <option value="Chinese">Chinese</option>
+                   </select>
+
+            
           </div>
 
           <address>
