--- a/index.html
+++ b/index.html
@@ -270,14 +270,21 @@
       </div>
     </section>
 
-    <section class="aa">
-      <div class="theme_container">
-
+    <section class="item">
+      <div class="item_container">
+        <ul class="inr">
+          <li><a href="#">SAFETY&JOY</a></li>
+          <li><a href="#">이벤트</a></li>
+          <li><a href="#">상품권</a></li>
+          <li><a href="#">교육여행/단체</a></li>
+          <li><a href="#">기업출장/단체</a></li>
+          <li><a href="#">여행정보</a></li>
+        </ul>
       </div>
     </section>
 
     <section class="bb">
-      
+
     </section>
 
     <!-- <section class="best">
