--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
         어디론가 훌쩍 떠나기 좋은 달이죠?<br />
         TRAVEL에서 엄선한 추천 여행지를 소개해드릴게요.
       </p>
+      <a href="#" class="btn">
+        <span class="btn_s">자세히 보기</span>
+        <span class="btn_s">자세히 보기</span>
+      </a>
       </div>
       
       <div class="tra_slide">
@@ -283,8 +287,11 @@
       </div>
     </section>
 
-    <section class="bb">
-
+    <section class="tripevent">
+      <div class="te_container">
+        <div class="trip"></div>
+        <div class="event"></div>
+      </div>
     </section>
 
     <!-- <section class="best">
