--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@
 
         <div class="fot_left">
           <h2 class="logo">Travel</h2>
+          <div class="inline">
           <p><span>주소 </span>: (03161) 서울특별시 종로구 인사동 5길 41</p>
           <p><span>사업자등록번호 </span>: 000-00-00000 00</p>
           <a href="#">사업자정보확인</a>
@@ -384,7 +385,7 @@
           <p><span>팩스 </span>: 02-0000-0000</p>
           <p><span>이메일 </span>: 15770000@travel.com</p>
           <p class="call"><span>고객센터</span> 1577-0000</p>
-
+        </div>
           <p class="caution">※ 부득이한 사정에 의해 여행일정이 변경되는 경우 사전 동의를 받습니다.</p>
           <p class="caution">※ 하나투어는 개별 항공권, 단품 및 일부 여행상품에 대하여 통신판매중개자로서 통신판매의 당사자가 아니며 해당상품의 거래정보 및 거래등에 대해 책임을 지지 않습니다.</p>
 
