--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
       </div>
     </section>
     
-
     <section class="travel_slide">
       <div class="tra_container">
       <div class="tra_title">
@@ -290,7 +289,9 @@
     <section class="tripevent">
       <div class="te_container">
         <div class="trip"></div>
-        <div class="event"></div>
+        <div class="event">
+          <h2>EVENT</h2>
+        </div>
       </div>
     </section>
 
