--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
               <ul class="lnb">
                 <li><a href="#">제주</a></li>
                 <li><a href="#">서울</a></li>
-                <li><a href="#">경상<span></span></a></li>
+                <li><a href="#">경상<span>click</span></a></li>
                 <li><a href="#">경기</a></li>
                 <li><a href="#">전라</a></li>
-                <li><a href="#">강원<span></span></a></li>
+                <li><a href="#">강원<span>click</span></a></li>
                 <li><a href="#">충청</a></li>
               </ul>
             </li>
@@ -346,68 +346,6 @@
               </a>  
             </li>
           </ul>
-      </div>
-        <!-- <div class="trip">
-          <h2>상품 소개</h2>
-          <ul class="introduce">
-            
-            <li>
-              <a href="#">
-                <img src="./images/product_01.jpg" alt="전주">
-                
-                <div>
-                  <h4>서울 한강 나들이</h4>
-                  <p>alksdjflskdjlf</p>
-                </div>
-              </a>  
-            </li>
-            <li>
-              <a href="#">
-                <img src="./images/product_02.jpg" alt="거제도">
-                <div>
-                  <h4>서울 한강 나들이</h4>
-                  <p>alksdjflskdjlf</p>
-                </div>
-              </a>  
-            </li>
-            <li>
-              <a href="#">
-                <img src="./images/product_03.jpg" alt="진주">
-                <div>
-                  <h4>서울 한강 나들이</h4>
-                  <p>alksdjflskdjlf</p>
-                </div>
-              </a>  
-            </li>
-            <li>
-              <a href="#">
-                <img src="./images/product_04.jpg" alt="부산">
-                <div>
-                  <h4>서울 한강 나들이</h4>
-                  <p>alksdjflskdjlf</p>
-                </div>
-              </a>  
-            </li>
-            <li>
-              <a href="#">
-                <img src="./images/product_05.jpg" alt="울릉도">
-                <div>
-                  <h4>서울 한강 나들이</h4>
-                  <p>alksdjflskdjlf</p>
-                </div>
-              </a>  
-            </li>
-            <li>
-              <a href="#">
-                <img src="./images/product_06.jpg" alt="우도">
-                <div>
-                  <h4>서울 한강 나들이</h4>
-                  <p>alksdjflskdjlf</p>
-                </div>
-              </a>  
-            </li>
-          </ul>
-        </div> -->
       </div>
     </section>
 
