--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
           불멍을 하며 스트레스를 날려보세요!
         </p>
 
-        <a href="#" class="btn_c">자세히 보기</a>
+        <a href="#" class="btn_c">자세히 보기<span></span></a>
           <!-- <ul class="place">
             <li>
               <a href="#">
