--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
       <div class="camping_bg">
         <div class="star1"></div>
         <div class="star2"></div>
+        <div class="star3"></div>
 
         <div class="bg_full"></div>
         <div class="light"></div>
