--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <ul class="lnb">
                 <li><a href="#">제주</a></li>
                 <li><a href="#">서울</a></li>
-                <li><a href="#">경상<span>click</span></a></li>
+                <li><a href="dokdo.html">경상<span>click</span></a></li>
                 <li><a href="#">경기</a></li>
                 <li><a href="#">전라</a></li>
                 <li><a href="#">강원<span>click</span></a></li>
