--- a/dokdo.html
+++ b/dokdo.html
@@ -6,13 +6,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dokdo_renual_portfolio</title>
+    <title>Dokdoo</title>
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/dokdo.css">
     <script src="./js/jquery.min.js"></script>
     <!-- <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script> -->
     <script src="./js/jquery.easing.min.js"></script>
-    <script src="./js/function.js"></script>
+    <script src="./js/function_dokdo.js"></script>
   </head>
 
   <body>
