--- a/dokdo.html
+++ b/dokdo.html
@@ -95,7 +95,7 @@
           </p>
 
           <button>
-            <a href="know.html" target="_blank" class="btn">자세히보기</a>
+            <a href="dokdo_know.html" target="_blank" class="btn">자세히보기</a>
           </button>
         </div>
       </section>
