--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
            상담원 연결  
            <a href="tel:1544-0000">1544 - 0000</a>
         </span>
-        <h1 class="logo"><a href="#">TRAVEL</a></h1>
+        <h1 class="logo"><a href="https://zetgar.github.io/portfolio_travel/">TRAVEL</a></h1>
         <ol class="mypage">
           <li><a href="#">join us</a></li>
           <li> <a href="#" class="login_btn">log in</a></li>
