--- a/dokdo.html
+++ b/dokdo.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ko">
-<div id="wrap">
 
   <head>
     <meta charset="UTF-8">
@@ -8,53 +7,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dokdoo</title>
     <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/dokdo.css">
+
+
     <script src="./js/jquery.min.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script> -->
     <script src="./js/jquery.easing.min.js"></script>
     <script src="./js/function_dokdo.js"></script>
   </head>
 
   <body>
     <div class="background">
-
     </div>
 
     <div id="wrap">
-
       <header>
-        <ul class="gnb">
-          <li><a href="#">영유권분쟁 바로알기</a></li>
-          <li><a href="#">독도의 자연</a></li>
-          <li><a href="#">독도의 구성</a></li>
-          <li><a href="#">독도 명예주민증</a></li>
-        </ul>
+        <div class="hd_bg"></div>
+        <div class="hd_container">
+          <h1 class="logo"><a href="https://zetgar.github.io/portfolio_travel/">TRAVEL</a></h1>
+          <nav>
+            <ol class="gnb">
+              <li><a href="#">영유권분쟁 바로알기</a></li>
+              <li><a href="#">독도의 자연</a></li>
+              <li><a href="#">독도의 구성</a></li>
+              <li><a href="#">독도 명예주민증</a></li>
+            </ol>
+          </nav>
+        </div>
       </header>
-
+  
+      <div class="login">
+        <div class="login_container">
+          <h2>LOGIN</h2>
+  
+          <div class="login_text">
+          <a href="#">join us</a>
+          <a href="#">id 찾기</a>
+          <a href="#">password 찾기</a>
+          </div>
+            <a href="#" class="btn_close">close</a>
+        </div>
+      </div>
 
       <section class="main">
-        <div class="main_visual">
-          <img src="./images/main_star1.png" alt="star" id="star1">
-          <img src="./images/main_star2.png" alt="star" id="star2">
-          <div id="sun"></div>
-          <div class="cloude"></div>
-          <div class="mn_bird"></div>
-          <div id="dokdo"></div>
+          <div class="night">
+            <div class="star"></div>
+            <div class="star"></div>
+            <div class="star"></div>
+          </div>
 
-          <div class="wave wave1"></div>
-          <div class="wave wave2"></div>
-          <div class="wave wave3"></div>
-          <div class="wave wave4"></div>
-        </div>
-        <div class="main_container">
-          <p>대한민국의 <br>
-            아름다운 영토</p>
-          <h2>독도</h2>
+          <div class="mn_fix">
+            <div class="wave"></div>
+            <div class="wave"></div>
+            <div class="wave"></div>
+            <div class="wave"></div>
+            <div class="dokdo"></div>
+          </div>
 
-          <button id="btn">
-            <a href="#gov" class="btn">대한민국의 기본 입장</a>
-          </button>
-        </div>
+          <div class="main_container">
+            <p>
+              대한민국의 <br>
+              아름다운 영토
+            </p>
+            <h2>독도</h2>
+
+             <a href="#gov" id="btn" class="btn">대한민국의 기본 입장</a>
+          </div>
       </section>
 
       <section class="government">
@@ -94,9 +112,7 @@
             과거 일본의 침략으로 인한 아픈 기억을 갖고 있는 우리 국민에게 다시금 큰 상처를 주고 있다.
           </p>
 
-          <button>
             <a href="dokdo_know.html" target="_blank" class="btn">자세히보기</a>
-          </button>
         </div>
       </section>
 
@@ -142,134 +158,130 @@
 
 
           <div class="na_card">
-            <dl class="na_box on">
-              <dt>기온</dt>
-              <dd>
-                ✔ 연평균 12도<br />
+            <div class="na_box on">
+              <h4>기온</h4>
+              <p>
+                <i class="fas fa-check-circle"></i>
+                연평균 12도<br />
                 - 1월 평균 1도, 8월 평균 23도
-              </dd>
+              </p>
 
-              <dt>강수량</dt>
-              <dd>
-                ✔ 연평균 1,240mm(겨울철 강수는 대부분 적설의 형태)<br />
-                ✔ 난류의 영향을 많이 받는 전형적인 해양성 기후 <br />
-                ✔ 안개가 잦고 연중 흐린 날이 약 160일 이상, 강우일수는 약 150일.
-              </dd>
-            </dl>
+              <h4>강수량</h4>
+              <p>
+                <i class="fas fa-check-circle"></i>
+                 연평균 1,240mm(겨울철 강수는 대부분 적설의 형태)<br />
+                 <i class="fas fa-check-circle"></i>
+                 난류의 영향을 많이 받는 전형적인 해양성 기후 <br />
+                 <i class="fas fa-check-circle"></i>
+                  안개가 잦고 연중 흐린 날이 약 160일 이상, 강우일수는 약 150일.
+              </p>
+            </div>
 
-            <dl class="na_box">
-
-              <dt>초본류</dt>
-              <dd>
-                ✔ 민들레, 괭이밥, 섬장대,
+            <div class="na_box">
+              <h4>초본류</h4>
+              <p>
+                <i class="fas fa-check-circle"></i>
+                민들레, 괭이밥, 섬장대,
                 강아지풀, 바랭이, 쑥, 쇠비름,
                 명아주, 질경이, 땅채송화,
                 해국, 섬기린초, 갯까치수염,
                 왕호장근 등
-              </dd>
+              </p>
 
-              <dt>목본류</dt>
-              <dd>
-                ✔ 곰슬(해송), 섬괴불나무,
+              <h4>목본류</h4>
+              <p>
+                <i class="fas fa-check-circle"></i>
+                곰슬(해송), 섬괴불나무,
                 붉은가시딸기(곰딸기),
                 줄사철, 박주가리, 동백,
                 보리밥나무 등
-              </dd>
+              </p>
 
-              <dt>
+              <p>
                 <span>
+                  <i class="fas fa-lightbulb"></i>
                   독도에서 확인된 식물은
                   약 60종
                 </span>
-              </dt>
-            </dl>
+              </p>
+            </div>
 
-            <dl class="na_box">
-              <dt>주요어류</dt>
-              <dd>
+            <div class="na_box">
+              <h4>주요어류</h4>
+              <p>
+                <i class="fas fa-check-circle"></i>
                 꽁치, 방어, 복어, 전어,
                 붕장어, 가자미, 도루묵,
                 임연수어, 조피볼락,
                 오징어 등
-              </dd>
+              </p>
 
-              <dt>패류</dt>
-              <dd>
+              <h4>패류</h4>
+              <p>
+                <i class="fas fa-check-circle"></i>
                 전복, 소라, 홍합 등
-              </dd>
+              </p>
 
-              <dt>해조류</dt>
-              <dd>
+              <h4>해조류</h4>
+              <p>
+                <i class="fas fa-check-circle"></i>
                 미역, 다시마, 김, 우뭇가사리, 톳 등
-              </dd>
+              </p>
 
-              <dt>기타 수산물</dt>
-              <dd>
+              <h4>기타 수산물</h4>
+              <p>
+                <i class="fas fa-check-circle"></i>
                 해삼, 새우, 홍게 및 성게 등
-              </dd>
-            </dl>
+              </p>
+            </div>
 
-            <dl class="na_box">
-              <dt>조류</dt>
-              <dd>
+
+            <div class="na_box">
+              <h4>조류</h4>
+              <p>
+                <i class="fas fa-check-circle"></i>
                 바다제비, 슴새, 괭이갈매기,
                 황조롱이, 물수리, 흰갈매기,
                 노랑지빠귀, 흑비둘기, 딱새,
                 까마귀, 노랑부리백로 등
                 약 160종
-              </dd>
+              </p>
 
-              <dt>곤충</dt>
-              <dd>
+              <h4>곤충</h4>
+              <p>
+                <i class="fas fa-check-circle"></i>
                 된장잠자리, 민집게벌레,
                 메뚜기, 딱정벌레, 파리,
                 작은멋쟁이나비 등 약 130종
-              </dd>
+              </p>
 
-              <dt>
+              <p>
                 <span>
+                  <i class="fas fa-lightbulb"></i>
                   독도는 철새 이동경로의 중간 피난처 및 휴식처로 우리나라 생물의 기원과 분포를 연구할 수 있어 섬 생물지리학적으로 중요하다.
                 </span>
-              </dt>
-            </dl>
+              </p>
+            </div>
           </div>
         </div>
       </section>
 
+      <div class="flex">
       <section class="component">
         <div class="component_container">
-          <div class="com_bg"></div>
           <h3>
             독도의 구성
           </h3>
 
           <p>
             독도는 화산활동에 의해 생성된 섬으로 2개의 큰 섬(동도, 서도)과<br />
-            89개의 부속도서로 구성되어 있으며, 총면적은 187,554㎡입니다.<br />
-            <span>
-              동도와 서도에 대해 자세히 알고 싶다면 +를 클릭해주세요.
-            </span>
+            89개의 부속도서로 구성되어 있으며, 총면적은 187,554㎡입니다.
           </p>
-
-          <address>
-            <strong>동도 주소 | </strong><br />
-            경상북도 울릉군 울릉읍 독도이사부길 55 (독도경비대)<br />
-            경상북도 울릉군 울릉읍 독도이사부길 63 (독도등대)<br /><br />
-
-            <strong>서도 주소 |</strong><br />
-            경상북도 울릉군 울릉읍 독도안용복길 3 (주민숙소)
-          </address>
         </div>
 
         <div class="com_box">
           <div class="com_boxcontainer">
-            <div class="com_visual">
-              <div class="com_dokdo">
-                <div class="dok_e"></div>
-                <div class="dok_w"></div>
-              </div>
-              <div class="plusX"></div>
-            </div>
+            <div></div>
 
             <p>
               <strong>동도</strong>는 유인등대 등 대부분의 시설들이 위치하고 있는 섬으로
@@ -284,14 +296,14 @@
               길이는 약 330m, 수심은 10m 미만입니다.
             </p>
           </div>
-
+          </div>
       </section>
 
       <section class="card">
         <div class="card_container">
           <h3>
-            독도 <br />
-            명예주민증 신청
+            명예주민증 <br />
+            신청
           </h3>
 
           <p>
@@ -299,22 +311,22 @@
           </p>
 
           <p class="card_bg">
-            ⩗ 독도에 입도하거나 선회관람한자중 울릉군 독도명예주민이 되고자 하는자.<br />
-            ⩗ 학술, 취재 및 촬영 등의 특수목적으로 입도한 자<br />
-            ⩗ 신청은 독도를 입도하거나 선회 관람한 다음날부터 가능
+            <i class="far fa-check-circle"></i>
+            독도에 입도하거나 선회 관람한자 중 울릉군 독도명예주민이 되고자 하는자.<br />
+            <i class="far fa-check-circle"></i>
+            학술, 취재 및 촬영 등의 특수목적으로 입도한 자<br />
+            <i class="far fa-check-circle"></i> 신청은 독도를 입도하거나 선회 관람한 다음날부터 가능
+            
           </p>
 
-          <button>
             <a href="https://www.intodokdo.go.kr/member/page.htm?mnu_uid=258" target="_blank" class="btn">
               명예주민증 신청하기
             </a>
-          </button>
         </div>
       </section>
+      </div>
 
       <footer>
-        <div class="ft_container">
-          <h2 class="logo"></h2>
           <p>
             이 사이트는 포트폴리오 목적으로 제작되었습니다.
           </p>
@@ -322,21 +334,7 @@
           <address>
             &copy; Designed by KIM SONG I
           </address>
-        </div>
       </footer>
-
     </div>
-</div>
-
-<!-- <script type="text/javascript" src="./js/vanilla-tilt.js"></script>
-<script>
-  VanillaTilt.init(document.querySelectorAll(".na_card"), {
-		max: 25,
-		speed: 400,
-    glare: true,
-    "max-glare":1,
-  });
-</script> -->
-</body>
-
+  </body>
 </html>
