--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="login_container">
         <h2>LOGIN</h2>
 
-        <form action="">
+        <form action="a">
         <div class="email">
           <label for="userid">아이디</label>
 				  <input type="text" id="userid" placeholder="Travel ID">
