--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <li><a href="dokdo.html">경상<span>click</span></a></li>
                 <li><a href="#">경기</a></li>
                 <li><a href="#">전라</a></li>
-                <li><a href="#">강원<span>click</span></a></li>
+                <li><a href="gangneung.html">강원<span>click</span></a></li>
                 <li><a href="#">충청</a></li>
               </ul>
             </li>
