--- a/gangneung.html
+++ b/gangneung.html
@@ -956,7 +956,6 @@
                 <ul class="sp_paginateion">
                   <li>
                     <a href="#">주문진</a>
-
                     <ol>
                       <li>
                         <div>
@@ -965,8 +964,8 @@
 
                             <colgroup>
                             <col style="width:20%;">
-                            <col style="width:60%;">
-                            <col style="width:20%;">
+                            <col style="width:55%;">
+                            <col style="width:25%;">
                             </colgroup>
 
                             <tbody>
@@ -992,10 +991,10 @@
                             <caption>영진 서핑안내</caption>
 
                             <colgroup>
-                            <col style="width:20%;">
-                            <col style="width:60%;">
-                            <col style="width:20%;">
-                            </colgroup>
+                              <col style="width:20%;">
+                              <col style="width:55%;">
+                              <col style="width:25%;">
+                              </colgroup>
 
                             <tbody>
                               <tr>
@@ -1021,10 +1020,10 @@
                             <caption>사천 서핑안내</caption>
 
                             <colgroup>
-                            <col style="width:20%;">
-                            <col style="width:60%;">
-                            <col style="width:20%;">
-                            </colgroup>
+                              <col style="width:20%;">
+                              <col style="width:55%;">
+                              <col style="width:25%;">
+                              </colgroup>
 
                             <tbody>
                               <tr>
@@ -1043,10 +1042,10 @@
                             <caption>사천 서핑안내</caption>
 
                             <colgroup>
-                            <col style="width:20%;">
-                            <col style="width:60%;">
-                            <col style="width:20%;">
-                            </colgroup>
+                              <col style="width:20%;">
+                              <col style="width:55%;">
+                              <col style="width:25%;">
+                              </colgroup>
 
                             <tbody>
                               <tr>
@@ -1065,10 +1064,10 @@
                             <caption>사천 서핑안내</caption>
 
                             <colgroup>
-                            <col style="width:20%;">
-                            <col style="width:60%;">
-                            <col style="width:20%;">
-                            </colgroup>
+                              <col style="width:20%;">
+                              <col style="width:55%;">
+                              <col style="width:25%;">
+                              </colgroup>
 
                             <tbody>
                               <tr>
@@ -1093,10 +1092,10 @@
                             <caption>금진 서핑안내</caption>
 
                             <colgroup>
-                            <col style="width:20%;">
-                            <col style="width:60%;">
-                            <col style="width:20%;">
-                            </colgroup>
+                              <col style="width:20%;">
+                              <col style="width:55%;">
+                              <col style="width:25%;">
+                              </colgroup>
 
                             <tbody>
                               <tr>
@@ -1115,10 +1114,10 @@
                             <caption>금진 서핑안내</caption>
 
                             <colgroup>
-                            <col style="width:20%;">
-                            <col style="width:60%;">
-                            <col style="width:20%;">
-                            </colgroup>
+                              <col style="width:20%;">
+                              <col style="width:55%;">
+                              <col style="width:25%;">
+                              </colgroup>
 
                             <tbody>
                               <tr>
@@ -1137,10 +1136,10 @@
                             <caption>금진 서핑안내</caption>
 
                             <colgroup>
-                            <col style="width:20%;">
-                            <col style="width:60%;">
-                            <col style="width:20%;">
-                            </colgroup>
+                              <col style="width:20%;">
+                              <col style="width:55%;">
+                              <col style="width:25%;">
+                              </colgroup>
 
                             <tbody>
                               <tr>
@@ -1159,10 +1158,10 @@
                             <caption>금진 서핑안내</caption>
 
                             <colgroup>
-                            <col style="width:20%;">
-                            <col style="width:60%;">
-                            <col style="width:20%;">
-                            </colgroup>
+                              <col style="width:20%;">
+                              <col style="width:55%;">
+                              <col style="width:25%;">
+                              </colgroup>
 
                             <tbody>
                               <tr>
@@ -1342,7 +1341,13 @@
     </section>
 
     <footer>
+      <p>
+        이 사이트는 포트폴리오 목적으로 제작되었습니다.
+      </p>
 
+      <address>
+        &copy; Designed by KIM SONG I
+      </address>
     </footer>
 
   </div>
