--- a/dokdo.html
+++ b/dokdo.html
@@ -21,20 +21,27 @@
     </div>
 
     <div id="wrap">
-      <header>
-        <div class="hd_bg"></div>
-        <div class="hd_container">
-          <h1 class="logo"><a href="https://zetgar.github.io/portfolio_travel/">TRAVEL</a></h1>
-          <nav>
-            <ol class="gnb">
-              <li><a href="#">영유권분쟁 바로알기</a></li>
+      
+    <header>
+      <div class="hd_container">
+      <h1 class="logo"><a href="https://zetgar.github.io/portfolio_travel/">Travel</a></h1>
+
+      <nav>
+        <ul class="gnb">
+          <li><a href="#">영유권분쟁 바로알기</a></li>
               <li><a href="#">독도의 자연</a></li>
               <li><a href="#">독도의 구성</a></li>
               <li><a href="#">독도 명예주민증</a></li>
-            </ol>
-          </nav>
-        </div>
-      </header>
+        </ul>
+      </nav>
+
+      <div>
+        <a href="#">Join us</a>
+        <a href="#">login</a>
+      </div>
+    </div>
+    </header>
+
   
       <div class="login">
         <div class="login_container">
