--- a/gangneung.html
+++ b/gangneung.html
@@ -77,6 +77,7 @@
             특별한 추억을 만들기 위해​ 사람들은 새로운 여행지를 찾습니다. <br /> 
             권역별로 나누어 설계한 추천코스로 합리적이고 이색적인 여행을 즐겨보세요!
           </p>
+          <span>움직이는 아이콘을 클릭해보세요.</span>
         </div>
 
         <div class="cs_content">
@@ -86,6 +87,7 @@
             <li><a href="#">대관령권</a></li>
             <li><a href="#">정동진권</a></li>
           </ul>
+          
 
           <div class="cs_map">
           <ol>
