--- a/gangneung.html
+++ b/gangneung.html
@@ -19,6 +19,7 @@
 
 <body>
   <div id="wrap">
+    <a href="index.html" class="prev">&lt;</a>
 
     <header>
       <div class="hd_container">
@@ -68,6 +69,7 @@
         </h2>
       </div>
     </section>
+    
     <section class="course">
       <div class="cs_container">
         <div class="cs_title">
