--- a/dokdo.html
+++ b/dokdo.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="ko">
-
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dokdoo</title>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/dokdo.css">
-
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+      integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/dokdo.css" />
 
     <script src="./js/jquery.min.js"></script>
     <script src="./js/jquery.easing.min.js"></script>
@@ -17,69 +20,68 @@
   </head>
 
   <body>
-    <div class="background">
-    </div>
+    <div class="background"></div>
 
     <div id="wrap">
-      
-    <header>
-      <div class="hd_container">
-      <h1 class="logo"><a href="https://zetgar.github.io/portfolio_travel/">Travel</a></h1>
+      <header>
+        <div class="hd_container">
+          <h1 class="logo">
+            <a href="https://zetgar.github.io/portfolio_travel/">Travel</a>
+          </h1>
 
-      <nav>
-        <ul class="gnb">
-          <li><a href="#">영유권분쟁 바로알기</a></li>
+          <nav>
+            <ul class="gnb">
+              <li><a href="#">영유권분쟁 바로알기</a></li>
               <li><a href="#">독도의 자연</a></li>
               <li><a href="#">독도의 구성</a></li>
               <li><a href="#">독도 명예주민증</a></li>
-        </ul>
-      </nav>
+            </ul>
+          </nav>
 
-      <div>
-        <a href="#">Join us</a>
-        <a href="#">login</a>
-      </div>
-    </div>
-    </header>
+          <div>
+            <a href="#">Join us</a>
+            <a href="#">login</a>
+          </div>
+        </div>
+      </header>
 
-  
       <div class="login">
         <div class="login_container">
           <h2>LOGIN</h2>
-  
+
           <div class="login_text">
-          <a href="#">join us</a>
-          <a href="#">id 찾기</a>
-          <a href="#">password 찾기</a>
+            <a href="#">join us</a>
+            <a href="#">id 찾기</a>
+            <a href="#">password 찾기</a>
           </div>
-            <a href="#" class="btn_close">close</a>
+          <a href="#" class="btn_close">close</a>
         </div>
       </div>
 
       <section class="main">
-          <div class="night">
-            <div class="star"></div>
-            <div class="star"></div>
-            <div class="star"></div>
-          </div>
+        <div class="night">
+          <div class="star"></div>
+          <div class="star"></div>
+          <div class="star"></div>
+        </div>
 
-          <div class="mn_fix">
-            <div class="wave"></div>
-            <div class="wave"></div>
-            <div class="wave"></div>
-            <div class="wave"></div>
-            <div class="dokdo"></div>
-          </div>
+        <div class="mn_fix">
+          <div class="wave"></div>
+          <div class="wave"></div>
+          <div class="wave"></div>
+          <div class="wave"></div>
+          <div class="dokdo"></div>
+        </div>
 
-          <div class="main_container">
-            <p>
-              대한민국의 <br>
-              아름다운 영토
-            </p>
-            <h2>독도</h2>
+        <div class="main_container">
+          <p>
+            대한민국의 <br />
+            아름다운 영토
+          </p>
+          <h2>독도</h2>
 
-             <a href="#gov" id="btn" class="btn">대한민국의 기본 입장</a>
-          </div>
+          <a href="#gov" id="btn" class="btn">대한민국의 기본 입장</a>
+        </div>
       </section>
 
       <section class="government">
@@ -93,19 +95,21 @@
           </h3>
 
           <p>
-            독도는 열사적, 지리적, 국제법적으로 명백한 우리 고유의 영토입니다. <br />
-            독도에 대한 영유권 분쟁은 존재하지 않으며, 독도는 외교 교섭이나 사법적 해결의 대상이 될 수 없습니다.<br /><br />
+            독도는 열사적, 지리적, 국제법적으로 명백한 우리 고유의 영토입니다.
+            <br />
+            독도에 대한 영유권 분쟁은 존재하지 않으며, 독도는 외교 교섭이나
+            사법적 해결의 대상이 될 수 없습니다.<br /><br />
 
             우리 정부는 독도에 대한 확고한 영토주권을 행사하고 있습니다.<br />
-            우리 정부는 독도에 대한 어떠한 도발에도 단호하고 엄중하게 대응하고 있으며,<br />
+            우리 정부는 독도에 대한 어떠한 도발에도 단호하고 엄중하게 대응하고
+            있으며,<br />
             앞으로도 지속적으로 독도에 대한 우리의 주권을 수호해 나가겠습니다.
           </p>
         </div>
       </section>
 
       <section class="sovereignty">
-        <div class="sovereignty_visual">
-        </div>
+        <div class="sovereignty_visual"></div>
 
         <div class="sovereignty_container">
           <h3>
@@ -114,24 +118,29 @@
           </h3>
 
           <p>
-            현재까지 이르는 일본의 독도 침탈행위는 과거의 역사적 사실을 부정하고<br />
-            침략을 정당화하던 당시의 왜곡된 사실을 바탕으로 하고 있다는 점에서 더욱 큰 문제가 있으며,<br />
-            과거 일본의 침략으로 인한 아픈 기억을 갖고 있는 우리 국민에게 다시금 큰 상처를 주고 있다.
+            현재까지 이르는 일본의 독도 침탈행위는 과거의 역사적 사실을
+            부정하고<br />
+            침략을 정당화하던 당시의 왜곡된 사실을 바탕으로 하고 있다는 점에서
+            더욱 큰 문제가 있으며,<br />
+            과거 일본의 침략으로 인한 아픈 기억을 갖고 있는 우리 국민에게 다시금
+            큰 상처를 주고 있다.
           </p>
 
-            <a href="dokdo_know.html" target="_blank" class="btn">자세히보기</a>
+          <a href="dokdo_know.html" target="_blank" class="btn">자세히보기</a>
         </div>
       </section>
 
       <section class="nature">
         <ul class="na_gnb">
-          <li><a href="#" class="sky_container">
+          <li>
+            <a href="#" class="sky_container">
               <div class="sky"></div>
               <div class="rain"></div>
             </a>
           </li>
 
-          <li><a href="#" class="leaf_container">
+          <li>
+            <a href="#" class="leaf_container">
               <div class="flower flower1"></div>
             </a>
           </li>
@@ -139,7 +148,6 @@
           <li><a href="#" class="fish"></a></li>
           <li><a href="#" class="bird"></a></li>
         </ul>
-
 
         <div class="nature_visual">
           <div class="island"></div>
@@ -151,18 +159,14 @@
         </div>
 
         <div class="nature_container">
-          <h3>
-            독도의 자연
-          </h3>
+          <h3>독도의 자연</h3>
 
           <p>
-            독도는 역사성과 더불어 자연과학적 학술 가치가 매우 큰 섬이므로 천연기념물로 지정하여 보호하고 있습니다.<br />
+            독도는 역사성과 더불어 자연과학적 학술 가치가 매우 큰 섬이므로
+            천연기념물로 지정하여 보호하고 있습니다.<br />
             천혜의 자연환경을 품은 독도의 기후와 생태적 가치를 알려드립니다.<br />
-            <span>
-              움직이는 그림을 클릭해보세요.
-            </span>
+            <span> 움직이는 그림을 클릭해보세요. </span>
           </p>
-
 
           <div class="na_card">
             <div class="na_box on">
@@ -176,11 +180,11 @@
               <h4>강수량</h4>
               <p>
                 <i class="fas fa-check-circle"></i>
-                 연평균 1,240mm(겨울철 강수는 대부분 적설의 형태)<br />
-                 <i class="fas fa-check-circle"></i>
-                 난류의 영향을 많이 받는 전형적인 해양성 기후 <br />
-                 <i class="fas fa-check-circle"></i>
-                  안개가 잦고 연중 흐린 날이 약 160일 이상, 강우일수는 약 150일.
+                연평균 1,240mm(겨울철 강수는 대부분 적설의 형태)<br />
+                <i class="fas fa-check-circle"></i>
+                난류의 영향을 많이 받는 전형적인 해양성 기후 <br />
+                <i class="fas fa-check-circle"></i>
+                안개가 잦고 연중 흐린 날이 약 160일 이상, 강우일수는 약 150일.
               </p>
             </div>
 
@@ -188,27 +192,21 @@
               <h4>초본류</h4>
               <p>
                 <i class="fas fa-check-circle"></i>
-                민들레, 괭이밥, 섬장대,
-                강아지풀, 바랭이, 쑥, 쇠비름,
-                명아주, 질경이, 땅채송화,
-                해국, 섬기린초, 갯까치수염,
-                왕호장근 등
+                민들레, 괭이밥, 섬장대, 강아지풀, 바랭이, 쑥, 쇠비름, 명아주,
+                질경이, 땅채송화, 해국, 섬기린초, 갯까치수염, 왕호장근 등
               </p>
 
               <h4>목본류</h4>
               <p>
                 <i class="fas fa-check-circle"></i>
-                곰슬(해송), 섬괴불나무,
-                붉은가시딸기(곰딸기),
-                줄사철, 박주가리, 동백,
-                보리밥나무 등
+                곰슬(해송), 섬괴불나무, 붉은가시딸기(곰딸기), 줄사철, 박주가리,
+                동백, 보리밥나무 등
               </p>
 
               <p>
                 <span>
                   <i class="fas fa-lightbulb"></i>
-                  독도에서 확인된 식물은
-                  약 60종
+                  독도에서 확인된 식물은 약 60종
                 </span>
               </p>
             </div>
@@ -217,10 +215,8 @@
               <h4>주요어류</h4>
               <p>
                 <i class="fas fa-check-circle"></i>
-                꽁치, 방어, 복어, 전어,
-                붕장어, 가자미, 도루묵,
-                임연수어, 조피볼락,
-                오징어 등
+                꽁치, 방어, 복어, 전어, 붕장어, 가자미, 도루묵, 임연수어,
+                조피볼락, 오징어 등
               </p>
 
               <h4>패류</h4>
@@ -242,30 +238,26 @@
               </p>
             </div>
 
-
             <div class="na_box">
               <h4>조류</h4>
               <p>
                 <i class="fas fa-check-circle"></i>
-                바다제비, 슴새, 괭이갈매기,
-                황조롱이, 물수리, 흰갈매기,
-                노랑지빠귀, 흑비둘기, 딱새,
-                까마귀, 노랑부리백로 등
-                약 160종
+                바다제비, 슴새, 괭이갈매기, 황조롱이, 물수리, 흰갈매기,
+                노랑지빠귀, 흑비둘기, 딱새, 까마귀, 노랑부리백로 등 약 160종
               </p>
 
               <h4>곤충</h4>
               <p>
                 <i class="fas fa-check-circle"></i>
-                된장잠자리, 민집게벌레,
-                메뚜기, 딱정벌레, 파리,
-                작은멋쟁이나비 등 약 130종
+                된장잠자리, 민집게벌레, 메뚜기, 딱정벌레, 파리, 작은멋쟁이나비
+                등 약 130종
               </p>
 
               <p>
                 <span>
                   <i class="fas fa-lightbulb"></i>
-                  독도는 철새 이동경로의 중간 피난처 및 휴식처로 우리나라 생물의 기원과 분포를 연구할 수 있어 섬 생물지리학적으로 중요하다.
+                  독도는 철새 이동경로의 중간 피난처 및 휴식처로 우리나라 생물의
+                  기원과 분포를 연구할 수 있어 섬 생물지리학적으로 중요하다.
                 </span>
               </p>
             </div>
@@ -274,73 +266,70 @@
       </section>
 
       <div class="flex">
-      <section class="component">
-        <div class="component_container">
-          <h3>
-            독도의 구성
-          </h3>
-
-          <p>
-            독도는 화산활동에 의해 생성된 섬으로 2개의 큰 섬(동도, 서도)과<br />
-            89개의 부속도서로 구성되어 있으며, 총면적은 187,554㎡입니다.
-          </p>
-        </div>
-
-        <div class="com_box">
-          <div class="com_boxcontainer">
-            <div></div>
+        <section class="component">
+          <div class="component_container">
+            <h3>독도의 구성</h3>
 
             <p>
-              <strong>동도</strong>는 유인등대 등 대부분의 시설들이 위치하고 있는 섬으로
-              높이는 98.6m, 둘레는 2.8㎞, 면적은 73,297㎡입니다.<br />
-
-              <strong>서도</strong>는 높이 168.5m, 둘레 2.6㎞, 면적 88,740㎡이며
-              전체적으로 험준한 원추형의 발달상태를 이루고 있으며,
-              심한 사면경사를 이루고 있습니다.<br />
-
-              기타 부속도서들의 총면적은 25,517㎡이며,
-              동도와 서도 사이의 해협은 폭 151m,
-              길이는 약 330m, 수심은 10m 미만입니다.
+              독도는 화산활동에 의해 생성된 섬으로 2개의 큰 섬(동도, 서도)과<br />
+              89개의 부속도서로 구성되어 있으며, 총면적은 187,554㎡입니다.
             </p>
           </div>
+
+          <div class="com_box">
+            <div class="com_boxcontainer">
+              <div></div>
+
+              <p>
+                <strong>동도</strong>는 유인등대 등 대부분의 시설들이 위치하고
+                있는 섬으로 높이는 98.6m, 둘레는 2.8㎞, 면적은
+                73,297㎡입니다.<br />
+
+                <strong>서도</strong>는 높이 168.5m, 둘레 2.6㎞, 면적
+                88,740㎡이며 전체적으로 험준한 원추형의 발달상태를 이루고
+                있으며, 심한 사면경사를 이루고 있습니다.<br />
+
+                기타 부속도서들의 총면적은 25,517㎡이며, 동도와 서도 사이의
+                해협은 폭 151m, 길이는 약 330m, 수심은 10m 미만입니다.
+              </p>
+            </div>
           </div>
-      </section>
+        </section>
 
-      <section class="card">
-        <div class="card_container">
-          <h3>
-            명예주민증 <br />
-            신청
-          </h3>
+        <section class="card">
+          <div class="card_container">
+            <h3>
+              명예주민증 <br />
+              신청
+            </h3>
 
-          <p>
-            명예주민증 발급 시행에 따라 발급대상은 아래와 같습니다.
-          </p>
+            <p>명예주민증 발급 시행에 따라 발급대상은 아래와 같습니다.</p>
 
-          <p class="card_bg">
-            <i class="far fa-check-circle"></i>
-            독도에 입도하거나 선회 관람한자 중 울릉군 독도명예주민이 되고자 하는자.<br />
-            <i class="far fa-check-circle"></i>
-            학술, 취재 및 촬영 등의 특수목적으로 입도한 자<br />
-            <i class="far fa-check-circle"></i> 신청은 독도를 입도하거나 선회 관람한 다음날부터 가능
-            
-          </p>
+            <p class="card_bg">
+              <i class="far fa-check-circle"></i>
+              독도에 입도하거나 선회 관람한자 중 울릉군 독도명예주민이 되고자
+              하는자.<br />
+              <i class="far fa-check-circle"></i>
+              학술, 취재 및 촬영 등의 특수목적으로 입도한 자<br />
+              <i class="far fa-check-circle"></i> 신청은 독도를 입도하거나 선회
+              관람한 다음날부터 가능
+            </p>
 
-            <a href="https://www.intodokdo.go.kr/member/page.htm?mnu_uid=258" target="_blank" class="btn">
+            <a
+              href="https://www.intodokdo.go.kr/member/page.htm?mnu_uid=258"
+              target="_blank"
+              class="btn"
+            >
               명예주민증 신청하기
             </a>
-        </div>
-      </section>
+          </div>
+        </section>
       </div>
 
       <footer>
-          <p>
-            이 사이트는 포트폴리오 목적으로 제작되었습니다.
-          </p>
+        <p>이 사이트는 포트폴리오 목적으로 제작되었습니다.</p>
 
-          <address>
-            &copy; Designed by KIM SONG I
-          </address>
+        <address>&copy; Designed by KIM SONG I</address>
       </footer>
     </div>
   </body>
