--- a/dokdo.html
+++ b/dokdo.html
@@ -31,10 +31,10 @@
 
           <nav>
             <ul class="gnb">
+              <li><a href="#">정부의 기본입장</a></li>
               <li><a href="#">영유권분쟁 바로알기</a></li>
               <li><a href="#">독도의 자연</a></li>
-              <li><a href="#">독도의 구성</a></li>
-              <li><a href="#">독도 명예주민증</a></li>
+              <li><a href="#">독도의 구성 및 주민증</a></li>
             </ul>
           </nav>
 
