--- a/gangneung.html
+++ b/gangneung.html
@@ -19,11 +19,10 @@
 
 <body>
   <div id="wrap">
-    <a href="index.html" class="prev">&lt;</a>
 
     <header>
       <div class="hd_container">
-      <h1 class="logo"><a href="https://zetgar.github.io/portfolio_travel/">Travel</a></h1>
+      <h1 class="logo"><a href="index.html">Travel</a></h1>
 
       <nav>
         <ul class="gnb">
